# newsletterbyfuture

./: .gitignore  CLI.py  Dockerfile.prod  check_dependences.py  cloudbuild.yaml  main.py  pyproject.toml  report.md  requirements.txt  token.pickle
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yaml
config/: tasks.yaml
helpers/: say_hello.py  send_email.py
src/crewai_gcp/: Mailing.py  crew.py  main.py
src/crewai_gcp/config/: tasks.yaml
